--- a/Config/Json/c/ItemConfigCategory.json
+++ b/Config/Json/c/ItemConfigCategory.json
@@ -4,63 +4,72 @@
     "Name": "道具60001",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60001"
   },
   {
     "Id": 60002,
     "Name": "道具60002",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60002"
   },
   {
     "Id": 60003,
     "Name": "道具60003",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60003"
   },
   {
     "Id": 60004,
     "Name": "道具60004",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60004"
   },
   {
     "Id": 60005,
     "Name": "道具60005",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60005"
   },
   {
     "Id": 60006,
     "Name": "道具60006",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60006"
   },
   {
     "Id": 60007,
     "Name": "道具60007",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60007"
   },
   {
     "Id": 60008,
     "Name": "道具60008",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60008"
   },
   {
     "Id": 60009,
     "Name": "道具60009",
     "Type": 1,
     "Quality": 1,
-    "UseLevel": 1
+    "UseLevel": 1,
+    "Icon": "itemicon_60009"
   },
   {
     "Id": 60010,
@@ -68,7 +77,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 1
+    "EquipmentType": 1,
+    "Icon": "itemicon_60010"
   },
   {
     "Id": 60011,
@@ -76,7 +86,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 2
+    "EquipmentType": 2,
+    "Icon": "itemicon_60011"
   },
   {
     "Id": 60012,
@@ -84,7 +95,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 3
+    "EquipmentType": 3,
+    "Icon": "itemicon_60012"
   },
   {
     "Id": 60013,
@@ -92,7 +104,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 4
+    "EquipmentType": 4,
+    "Icon": "itemicon_60013"
   },
   {
     "Id": 60014,
@@ -100,7 +113,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 5
+    "EquipmentType": 5,
+    "Icon": "itemicon_60014"
   },
   {
     "Id": 60015,
@@ -108,7 +122,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 6
+    "EquipmentType": 6,
+    "Icon": "itemicon_60015"
   },
   {
     "Id": 60016,
@@ -116,7 +131,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 7
+    "EquipmentType": 7,
+    "Icon": "itemicon_60016"
   },
   {
     "Id": 60017,
@@ -124,7 +140,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 8
+    "EquipmentType": 8,
+    "Icon": "itemicon_60017"
   },
   {
     "Id": 60018,
@@ -132,7 +149,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 9
+    "EquipmentType": 9,
+    "Icon": "itemicon_60018"
   },
   {
     "Id": 60019,
@@ -140,7 +158,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 1
+    "EquipmentType": 1,
+    "Icon": "itemicon_60019"
   },
   {
     "Id": 60020,
@@ -148,7 +167,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 3
+    "EquipmentType": 3,
+    "Icon": "itemicon_60020"
   },
   {
     "Id": 60021,
@@ -156,7 +176,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 4
+    "EquipmentType": 4,
+    "Icon": "itemicon_60021"
   },
   {
     "Id": 60022,
@@ -164,7 +185,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 5
+    "EquipmentType": 5,
+    "Icon": "itemicon_60022"
   },
   {
     "Id": 60023,
@@ -172,7 +194,8 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 6
+    "EquipmentType": 6,
+    "Icon": "itemicon_60023"
   },
   {
     "Id": 60024,
@@ -180,6 +203,7 @@
     "Type": 3,
     "Quality": 1,
     "UseLevel": 1,
-    "EquipmentType": 7
+    "EquipmentType": 7,
+    "Icon": "itemicon_60024"
   }
 ]
