--- a/Config/Json/cs/ItemConfigCategory.json
+++ b/Config/Json/cs/ItemConfigCategory.json
@@ -5,7 +5,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60001"
   },
   {
     "Id": 60002,
@@ -13,7 +14,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60002"
   },
   {
     "Id": 60003,
@@ -21,7 +23,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60003"
   },
   {
     "Id": 60004,
@@ -29,7 +32,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60004"
   },
   {
     "Id": 60005,
@@ -37,7 +41,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60005"
   },
   {
     "Id": 60006,
@@ -45,7 +50,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60006"
   },
   {
     "Id": 60007,
@@ -53,7 +59,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60007"
   },
   {
     "Id": 60008,
@@ -61,7 +68,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60008"
   },
   {
     "Id": 60009,
@@ -69,7 +77,8 @@
     "Type": 1,
     "Quality": 1,
     "UseLevel": 1,
-    "MaxCount": 999
+    "MaxCount": 999,
+    "Icon": "itemicon_60009"
   },
   {
     "Id": 60010,
@@ -78,7 +87,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 1
+    "EquipmentType": 1,
+    "Icon": "itemicon_60010"
   },
   {
     "Id": 60011,
@@ -87,7 +97,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 2
+    "EquipmentType": 2,
+    "Icon": "itemicon_60011"
   },
   {
     "Id": 60012,
@@ -96,7 +107,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 3
+    "EquipmentType": 3,
+    "Icon": "itemicon_60012"
   },
   {
     "Id": 60013,
@@ -105,7 +117,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 4
+    "EquipmentType": 4,
+    "Icon": "itemicon_60013"
   },
   {
     "Id": 60014,
@@ -114,7 +127,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 5
+    "EquipmentType": 5,
+    "Icon": "itemicon_60014"
   },
   {
     "Id": 60015,
@@ -123,7 +137,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 6
+    "EquipmentType": 6,
+    "Icon": "itemicon_60015"
   },
   {
     "Id": 60016,
@@ -132,7 +147,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 7
+    "EquipmentType": 7,
+    "Icon": "itemicon_60016"
   },
   {
     "Id": 60017,
@@ -141,7 +157,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 8
+    "EquipmentType": 8,
+    "Icon": "itemicon_60017"
   },
   {
     "Id": 60018,
@@ -150,7 +167,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 9
+    "EquipmentType": 9,
+    "Icon": "itemicon_60018"
   },
   {
     "Id": 60019,
@@ -159,7 +177,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 1
+    "EquipmentType": 1,
+    "Icon": "itemicon_60019"
   },
   {
     "Id": 60020,
@@ -168,7 +187,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 3
+    "EquipmentType": 3,
+    "Icon": "itemicon_60020"
   },
   {
     "Id": 60021,
@@ -177,7 +197,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 4
+    "EquipmentType": 4,
+    "Icon": "itemicon_60021"
   },
   {
     "Id": 60022,
@@ -186,7 +207,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 5
+    "EquipmentType": 5,
+    "Icon": "itemicon_60022"
   },
   {
     "Id": 60023,
@@ -195,7 +217,8 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 6
+    "EquipmentType": 6,
+    "Icon": "itemicon_60023"
   },
   {
     "Id": 60024,
@@ -204,6 +227,7 @@
     "Quality": 1,
     "UseLevel": 1,
     "MaxCount": 1,
-    "EquipmentType": 7
+    "EquipmentType": 7,
+    "Icon": "itemicon_60024"
   }
 ]
