--- a/Config/Json/c/GlobalDataConfigCategory.json
+++ b/Config/Json/c/GlobalDataConfigCategory.json
@@ -7,6 +7,7 @@
     "CreateRoleMaxLimit": 5,
     "ResetTalentCurrency": 1,
     "ResetTalentCurrencyValue": 50000,
-    "ExtendBagItemConfig": 60006
+    "ExtendBagItemConfig": 60006,
+    "TeamMemberLimit": 4
   }
 ]
