--- a/Config/Json/c/ItemConfigCategory.json
+++ b/Config/Json/c/ItemConfigCategory.json
@@ -72,6 +72,166 @@
     "Icon": "itemicon_60009"
   },
   {
+    "Id": 710001,
+    "Name": "商店道具710001",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710001"
+  },
+  {
+    "Id": 710002,
+    "Name": "商店道具710002",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710002"
+  },
+  {
+    "Id": 710003,
+    "Name": "商店道具710003",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710003"
+  },
+  {
+    "Id": 710004,
+    "Name": "商店道具710004",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710004"
+  },
+  {
+    "Id": 710005,
+    "Name": "商店道具710005",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710005"
+  },
+  {
+    "Id": 710006,
+    "Name": "商店道具710006",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710006"
+  },
+  {
+    "Id": 710007,
+    "Name": "商店道具710007",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710007"
+  },
+  {
+    "Id": 710008,
+    "Name": "商店道具710008",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710008"
+  },
+  {
+    "Id": 710009,
+    "Name": "商店道具710009",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710009"
+  },
+  {
+    "Id": 710010,
+    "Name": "商店道具710010",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710010"
+  },
+  {
+    "Id": 710011,
+    "Name": "商店道具710011",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710011"
+  },
+  {
+    "Id": 710012,
+    "Name": "商店道具710012",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710012"
+  },
+  {
+    "Id": 710013,
+    "Name": "商店道具710013",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710013"
+  },
+  {
+    "Id": 710014,
+    "Name": "商店道具710014",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710014"
+  },
+  {
+    "Id": 710015,
+    "Name": "商店道具710015",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710015"
+  },
+  {
+    "Id": 710016,
+    "Name": "商店道具710016",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710016"
+  },
+  {
+    "Id": 710017,
+    "Name": "商店道具710017",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710017"
+  },
+  {
+    "Id": 710018,
+    "Name": "商店道具710018",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710018"
+  },
+  {
+    "Id": 710019,
+    "Name": "商店道具710019",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710019"
+  },
+  {
+    "Id": 710020,
+    "Name": "商店道具710020",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "Icon": "itemicon_710020"
+  },
+  {
     "Id": 60010,
     "Name": "破布头巾",
     "Type": 3,
