--- a/Config/Json/cs/ItemConfigCategory.json
+++ b/Config/Json/cs/ItemConfigCategory.json
@@ -81,6 +81,186 @@
     "Icon": "itemicon_60009"
   },
   {
+    "Id": 710001,
+    "Name": "itemname_710001",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710001"
+  },
+  {
+    "Id": 710002,
+    "Name": "itemname_710002",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710002"
+  },
+  {
+    "Id": 710003,
+    "Name": "itemname_710003",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710003"
+  },
+  {
+    "Id": 710004,
+    "Name": "itemname_710004",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710004"
+  },
+  {
+    "Id": 710005,
+    "Name": "itemname_710005",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710005"
+  },
+  {
+    "Id": 710006,
+    "Name": "itemname_710006",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710006"
+  },
+  {
+    "Id": 710007,
+    "Name": "itemname_710007",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710007"
+  },
+  {
+    "Id": 710008,
+    "Name": "itemname_710008",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710008"
+  },
+  {
+    "Id": 710009,
+    "Name": "itemname_710009",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710009"
+  },
+  {
+    "Id": 710010,
+    "Name": "itemname_710010",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710010"
+  },
+  {
+    "Id": 710011,
+    "Name": "itemname_710011",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710011"
+  },
+  {
+    "Id": 710012,
+    "Name": "itemname_710012",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710012"
+  },
+  {
+    "Id": 710013,
+    "Name": "itemname_710013",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710013"
+  },
+  {
+    "Id": 710014,
+    "Name": "itemname_710014",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710014"
+  },
+  {
+    "Id": 710015,
+    "Name": "itemname_710015",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710015"
+  },
+  {
+    "Id": 710016,
+    "Name": "itemname_710016",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710016"
+  },
+  {
+    "Id": 710017,
+    "Name": "itemname_710017",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710017"
+  },
+  {
+    "Id": 710018,
+    "Name": "itemname_710018",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710018"
+  },
+  {
+    "Id": 710019,
+    "Name": "itemname_710019",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710019"
+  },
+  {
+    "Id": 710020,
+    "Name": "itemname_710020",
+    "Type": 1,
+    "Quality": 1,
+    "UseLevel": 1,
+    "MaxCount": 9999,
+    "Icon": "itemicon_710020"
+  },
+  {
     "Id": 60010,
     "Name": "itemname_60010",
     "Type": 3,
