--- a/Config/Json/cs/RewardConfigCategory.json
+++ b/Config/Json/cs/RewardConfigCategory.json
@@ -278,5 +278,439 @@
         29
       ]
     ]
+  },
+  {
+    "Id": 300001,
+    "Name": "奖励包300001",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300002,
+    "Name": "奖励包300002",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300003,
+    "Name": "奖励包300003",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300004,
+    "Name": "奖励包300004",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300005,
+    "Name": "奖励包300005",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300006,
+    "Name": "奖励包300006",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300007,
+    "Name": "奖励包300007",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300008,
+    "Name": "奖励包300008",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300009,
+    "Name": "奖励包300009",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300010,
+    "Name": "奖励包300010",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300011,
+    "Name": "奖励包300011",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300012,
+    "Name": "奖励包300012",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300013,
+    "Name": "奖励包300013",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300014,
+    "Name": "奖励包300014",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300015,
+    "Name": "奖励包300015",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300016,
+    "Name": "奖励包300016",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300017,
+    "Name": "奖励包300017",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300018,
+    "Name": "奖励包300018",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300019,
+    "Name": "奖励包300019",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300020,
+    "Name": "奖励包300020",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300021,
+    "Name": "奖励包300021",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300022,
+    "Name": "奖励包300022",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300023,
+    "Name": "奖励包300023",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300024,
+    "Name": "奖励包300024",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300025,
+    "Name": "奖励包300025",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300026,
+    "Name": "奖励包300026",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300027,
+    "Name": "奖励包300027",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300028,
+    "Name": "奖励包300028",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300029,
+    "Name": "奖励包300029",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300030,
+    "Name": "奖励包300030",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
+  },
+  {
+    "Id": 300031,
+    "Name": "奖励包300031",
+    "Reward": [
+      [
+        60001,
+        10
+      ],
+      [
+        60002,
+        10
+      ]
+    ]
   }
 ]
