--- a/Config/Json/c/SubTaskConfigCategory.json
+++ b/Config/Json/c/SubTaskConfigCategory.json
@@ -1,127 +1,152 @@
 [
   {
     "Id": 10001,
-    "Name": "任务10001",
+    "Name": "子任务10001",
+    "Desc": "子任务10001描述",
     "SubTaskType": 3
   },
   {
     "Id": 10002,
-    "Name": "任务10002",
+    "Name": "子任务10002",
+    "Desc": "子任务10002描述",
     "SubTaskType": 3
   },
   {
     "Id": 10003,
-    "Name": "任务10003",
+    "Name": "子任务10003",
+    "Desc": "子任务10003描述",
     "SubTaskType": 3
   },
   {
     "Id": 10004,
-    "Name": "任务10004",
+    "Name": "子任务10004",
+    "Desc": "子任务10004描述",
     "SubTaskType": 3
   },
   {
     "Id": 10005,
-    "Name": "任务10005",
+    "Name": "子任务10005",
+    "Desc": "子任务10005描述",
     "SubTaskType": 3
   },
   {
     "Id": 10006,
-    "Name": "任务10006",
+    "Name": "子任务10006",
+    "Desc": "子任务10006描述",
     "SubTaskType": 3
   },
   {
     "Id": 10007,
-    "Name": "任务10007",
+    "Name": "子任务10007",
+    "Desc": "子任务10007描述",
     "SubTaskType": 3
   },
   {
     "Id": 10008,
-    "Name": "任务10008",
+    "Name": "子任务10008",
+    "Desc": "子任务10008描述",
     "SubTaskType": 3
   },
   {
     "Id": 10009,
-    "Name": "任务10009",
+    "Name": "子任务10009",
+    "Desc": "子任务10009描述",
     "SubTaskType": 3
   },
   {
     "Id": 10010,
-    "Name": "任务10010",
+    "Name": "子任务10010",
+    "Desc": "子任务10010描述",
     "SubTaskType": 3
   },
   {
     "Id": 10011,
-    "Name": "任务10011",
+    "Name": "子任务10011",
+    "Desc": "子任务10011描述",
     "SubTaskType": 3
   },
   {
     "Id": 10012,
-    "Name": "任务10012",
+    "Name": "子任务10012",
+    "Desc": "子任务10012描述",
     "SubTaskType": 3
   },
   {
     "Id": 10013,
-    "Name": "任务10013",
+    "Name": "子任务10013",
+    "Desc": "子任务10013描述",
     "SubTaskType": 3
   },
   {
     "Id": 10014,
-    "Name": "任务10014",
+    "Name": "子任务10014",
+    "Desc": "子任务10014描述",
     "SubTaskType": 3
   },
   {
     "Id": 10015,
-    "Name": "任务10015",
+    "Name": "子任务10015",
+    "Desc": "子任务10015描述",
     "SubTaskType": 3
   },
   {
     "Id": 10016,
-    "Name": "任务10016",
+    "Name": "子任务10016",
+    "Desc": "子任务10016描述",
     "SubTaskType": 3
   },
   {
     "Id": 10017,
-    "Name": "任务10017",
+    "Name": "子任务10017",
+    "Desc": "子任务10017描述",
     "SubTaskType": 3
   },
   {
     "Id": 10018,
-    "Name": "任务10018",
+    "Name": "子任务10018",
+    "Desc": "子任务10018描述",
     "SubTaskType": 3
   },
   {
     "Id": 10019,
-    "Name": "任务10019",
+    "Name": "子任务10019",
+    "Desc": "子任务10019描述",
     "SubTaskType": 3
   },
   {
     "Id": 10020,
-    "Name": "任务10020",
+    "Name": "子任务10020",
+    "Desc": "子任务10020描述",
     "SubTaskType": 3
   },
   {
     "Id": 10021,
-    "Name": "任务10021",
+    "Name": "子任务10021",
+    "Desc": "子任务10021描述",
     "SubTaskType": 3
   },
   {
     "Id": 10022,
-    "Name": "任务10022",
+    "Name": "子任务10022",
+    "Desc": "子任务10022描述",
     "SubTaskType": 3
   },
   {
     "Id": 10023,
-    "Name": "任务10023",
+    "Name": "子任务10023",
+    "Desc": "子任务10023描述",
     "SubTaskType": 3
   },
   {
     "Id": 10024,
-    "Name": "任务10024",
+    "Name": "子任务10024",
+    "Desc": "子任务10024描述",
     "SubTaskType": 3
   },
   {
     "Id": 10025,
-    "Name": "任务10025",
+    "Name": "子任务10025",
+    "Desc": "子任务10025描述",
     "SubTaskType": 3
   }
 ]
