--- a/Config/Json/c/TaskConfigCategory.json
+++ b/Config/Json/c/TaskConfigCategory.json
@@ -3,6 +3,7 @@
     "Id": 1001,
     "Name": "任务1001",
     "Type": 1,
+    "Desc": "子任务1001描述",
     "SubTask": [
       10001,
       10002,
@@ -15,6 +16,7 @@
     "Id": 1002,
     "Name": "任务1002",
     "Type": 1,
+    "Desc": "子任务1002描述",
     "SubTask": [
       10001,
       10002,
@@ -27,6 +29,7 @@
     "Id": 1003,
     "Name": "任务1003",
     "Type": 1,
+    "Desc": "子任务1003描述",
     "SubTask": [
       10002,
       10003,
@@ -39,6 +42,7 @@
     "Id": 1004,
     "Name": "任务1004",
     "Type": 1,
+    "Desc": "子任务1004描述",
     "SubTask": [
       10003,
       10004,
@@ -51,6 +55,7 @@
     "Id": 1005,
     "Name": "任务1005",
     "Type": 1,
+    "Desc": "子任务1005描述",
     "SubTask": [
       10004,
       10005,
@@ -63,6 +68,7 @@
     "Id": 1006,
     "Name": "任务1006",
     "Type": 1,
+    "Desc": "子任务1006描述",
     "SubTask": [
       10005,
       10006,
@@ -75,6 +81,7 @@
     "Id": 1007,
     "Name": "任务1007",
     "Type": 1,
+    "Desc": "子任务1007描述",
     "SubTask": [
       10006,
       10007,
@@ -87,6 +94,7 @@
     "Id": 1008,
     "Name": "任务1008",
     "Type": 1,
+    "Desc": "子任务1008描述",
     "SubTask": [
       10007,
       10008,
@@ -99,6 +107,7 @@
     "Id": 1009,
     "Name": "任务1009",
     "Type": 1,
+    "Desc": "子任务1009描述",
     "SubTask": [
       10008,
       10009,
@@ -111,6 +120,7 @@
     "Id": 1010,
     "Name": "任务1010",
     "Type": 1,
+    "Desc": "子任务1010描述",
     "SubTask": [
       10009,
       10010,
@@ -123,6 +133,7 @@
     "Id": 1011,
     "Name": "任务1011",
     "Type": 1,
+    "Desc": "子任务1011描述",
     "SubTask": [
       10009,
       10010,
@@ -136,6 +147,7 @@
     "Id": 1012,
     "Name": "任务1012",
     "Type": 1,
+    "Desc": "子任务1012描述",
     "SubTask": [
       10009,
       10010,
@@ -150,6 +162,7 @@
     "Id": 1013,
     "Name": "任务1013",
     "Type": 1,
+    "Desc": "子任务1013描述",
     "SubTask": [
       10009,
       10010,
@@ -165,6 +178,7 @@
     "Id": 1014,
     "Name": "任务1014",
     "Type": 1,
+    "Desc": "子任务1014描述",
     "SubTask": [
       10009,
       10010,
@@ -180,6 +194,7 @@
     "Id": 1015,
     "Name": "任务1015",
     "Type": 1,
+    "Desc": "子任务1015描述",
     "SubTask": [
       10009,
       10010,
@@ -195,6 +210,7 @@
     "Id": 1016,
     "Name": "任务1016",
     "Type": 1,
+    "Desc": "子任务1016描述",
     "SubTask": [
       10009,
       10010,
@@ -210,6 +226,7 @@
     "Id": 1017,
     "Name": "任务1017",
     "Type": 1,
+    "Desc": "子任务1017描述",
     "SubTask": [
       10009,
       10010,
@@ -225,6 +242,7 @@
     "Id": 1018,
     "Name": "任务1018",
     "Type": 1,
+    "Desc": "子任务1018描述",
     "SubTask": [
       10009,
       10010,
@@ -240,6 +258,7 @@
     "Id": 1019,
     "Name": "任务1019",
     "Type": 1,
+    "Desc": "子任务1019描述",
     "SubTask": [
       10009,
       10010,
@@ -255,6 +274,7 @@
     "Id": 1020,
     "Name": "任务1020",
     "Type": 1,
+    "Desc": "子任务1020描述",
     "SubTask": [
       10009,
       10010,
@@ -270,6 +290,7 @@
     "Id": 1021,
     "Name": "任务1021",
     "Type": 1,
+    "Desc": "子任务1021描述",
     "SubTask": [
       10009,
       10010,
@@ -284,6 +305,7 @@
     "Id": 1022,
     "Name": "任务1022",
     "Type": 1,
+    "Desc": "子任务1022描述",
     "SubTask": [],
     "PreTask": 1021,
     "NextTask": 1023
@@ -292,6 +314,7 @@
     "Id": 1023,
     "Name": "任务1023",
     "Type": 1,
+    "Desc": "子任务1023描述",
     "SubTask": [],
     "PreTask": 1022,
     "NextTask": 1024
@@ -300,6 +323,7 @@
     "Id": 1024,
     "Name": "任务1024",
     "Type": 1,
+    "Desc": "子任务1024描述",
     "SubTask": [],
     "PreTask": 1023,
     "NextTask": 1025
@@ -308,6 +332,7 @@
     "Id": 1025,
     "Name": "任务1025",
     "Type": 1,
+    "Desc": "子任务1025描述",
     "SubTask": [],
     "PreTask": 1024,
     "NextTask": 0
