--- a/Config/Json/s/TaskConfigCategory.json
+++ b/Config/Json/s/TaskConfigCategory.json
@@ -1,8 +1,9 @@
 [
   {
     "Id": 1001,
-    "Name": "任务1001",
+    "Name": "taskname_1001",
     "Type": 1,
+    "Desc": "taskdesc_1001",
     "SubTask": [
       10001,
       10002,
@@ -14,8 +15,9 @@
   },
   {
     "Id": 1002,
-    "Name": "任务1002",
+    "Name": "taskname_1002",
     "Type": 1,
+    "Desc": "taskdesc_1002",
     "SubTask": [
       10001,
       10002,
@@ -27,8 +29,9 @@
   },
   {
     "Id": 1003,
-    "Name": "任务1003",
+    "Name": "taskname_1003",
     "Type": 1,
+    "Desc": "taskdesc_1003",
     "SubTask": [
       10002,
       10003,
@@ -40,8 +43,9 @@
   },
   {
     "Id": 1004,
-    "Name": "任务1004",
+    "Name": "taskname_1004",
     "Type": 1,
+    "Desc": "taskdesc_1004",
     "SubTask": [
       10003,
       10004,
@@ -53,8 +57,9 @@
   },
   {
     "Id": 1005,
-    "Name": "任务1005",
+    "Name": "taskname_1005",
     "Type": 1,
+    "Desc": "taskdesc_1005",
     "SubTask": [
       10004,
       10005,
@@ -66,8 +71,9 @@
   },
   {
     "Id": 1006,
-    "Name": "任务1006",
+    "Name": "taskname_1006",
     "Type": 1,
+    "Desc": "taskdesc_1006",
     "SubTask": [
       10005,
       10006,
@@ -79,8 +85,9 @@
   },
   {
     "Id": 1007,
-    "Name": "任务1007",
+    "Name": "taskname_1007",
     "Type": 1,
+    "Desc": "taskdesc_1007",
     "SubTask": [
       10006,
       10007,
@@ -92,8 +99,9 @@
   },
   {
     "Id": 1008,
-    "Name": "任务1008",
+    "Name": "taskname_1008",
     "Type": 1,
+    "Desc": "taskdesc_1008",
     "SubTask": [
       10007,
       10008,
@@ -105,8 +113,9 @@
   },
   {
     "Id": 1009,
-    "Name": "任务1009",
+    "Name": "taskname_1009",
     "Type": 1,
+    "Desc": "taskdesc_1009",
     "SubTask": [
       10008,
       10009,
@@ -118,8 +127,9 @@
   },
   {
     "Id": 1010,
-    "Name": "任务1010",
+    "Name": "taskname_1010",
     "Type": 1,
+    "Desc": "taskdesc_1010",
     "SubTask": [
       10009,
       10010,
@@ -131,8 +141,9 @@
   },
   {
     "Id": 1011,
-    "Name": "任务1011",
+    "Name": "taskname_1011",
     "Type": 1,
+    "Desc": "taskdesc_1011",
     "SubTask": [
       10009,
       10010,
@@ -145,8 +156,9 @@
   },
   {
     "Id": 1012,
-    "Name": "任务1012",
+    "Name": "taskname_1012",
     "Type": 1,
+    "Desc": "taskdesc_1012",
     "SubTask": [
       10009,
       10010,
@@ -160,8 +172,9 @@
   },
   {
     "Id": 1013,
-    "Name": "任务1013",
+    "Name": "taskname_1013",
     "Type": 1,
+    "Desc": "taskdesc_1013",
     "SubTask": [
       10009,
       10010,
@@ -176,8 +189,9 @@
   },
   {
     "Id": 1014,
-    "Name": "任务1014",
+    "Name": "taskname_1014",
     "Type": 1,
+    "Desc": "taskdesc_1014",
     "SubTask": [
       10009,
       10010,
@@ -192,8 +206,9 @@
   },
   {
     "Id": 1015,
-    "Name": "任务1015",
+    "Name": "taskname_1015",
     "Type": 1,
+    "Desc": "taskdesc_1015",
     "SubTask": [
       10009,
       10010,
@@ -208,8 +223,9 @@
   },
   {
     "Id": 1016,
-    "Name": "任务1016",
+    "Name": "taskname_1016",
     "Type": 1,
+    "Desc": "taskdesc_1016",
     "SubTask": [
       10009,
       10010,
@@ -224,8 +240,9 @@
   },
   {
     "Id": 1017,
-    "Name": "任务1017",
+    "Name": "taskname_1017",
     "Type": 1,
+    "Desc": "taskdesc_1017",
     "SubTask": [
       10009,
       10010,
@@ -240,8 +257,9 @@
   },
   {
     "Id": 1018,
-    "Name": "任务1018",
+    "Name": "taskname_1018",
     "Type": 1,
+    "Desc": "taskdesc_1018",
     "SubTask": [
       10009,
       10010,
@@ -256,8 +274,9 @@
   },
   {
     "Id": 1019,
-    "Name": "任务1019",
+    "Name": "taskname_1019",
     "Type": 1,
+    "Desc": "taskdesc_1019",
     "SubTask": [
       10009,
       10010,
@@ -272,8 +291,9 @@
   },
   {
     "Id": 1020,
-    "Name": "任务1020",
+    "Name": "taskname_1020",
     "Type": 1,
+    "Desc": "taskdesc_1020",
     "SubTask": [
       10009,
       10010,
@@ -288,8 +308,9 @@
   },
   {
     "Id": 1021,
-    "Name": "任务1021",
+    "Name": "taskname_1021",
     "Type": 1,
+    "Desc": "taskdesc_1021",
     "SubTask": [
       10009,
       10010,
@@ -303,8 +324,9 @@
   },
   {
     "Id": 1022,
-    "Name": "任务1022",
+    "Name": "taskname_1022",
     "Type": 1,
+    "Desc": "taskdesc_1022",
     "SubTask": [],
     "PreTask": 1021,
     "NextTask": 1023,
@@ -312,8 +334,9 @@
   },
   {
     "Id": 1023,
-    "Name": "任务1023",
+    "Name": "taskname_1023",
     "Type": 1,
+    "Desc": "taskdesc_1023",
     "SubTask": [],
     "PreTask": 1022,
     "NextTask": 1024,
@@ -321,8 +344,9 @@
   },
   {
     "Id": 1024,
-    "Name": "任务1024",
+    "Name": "taskname_1024",
     "Type": 1,
+    "Desc": "taskdesc_1024",
     "SubTask": [],
     "PreTask": 1023,
     "NextTask": 1025,
@@ -330,8 +354,9 @@
   },
   {
     "Id": 1025,
-    "Name": "任务1025",
+    "Name": "taskname_1025",
     "Type": 1,
+    "Desc": "taskdesc_1025",
     "SubTask": [],
     "PreTask": 1024,
     "NextTask": 0,
