--- a/Config/Json/c/GlobalDataConfigCategory.json
+++ b/Config/Json/c/GlobalDataConfigCategory.json
@@ -10,7 +10,6 @@
     "ResetTalentCurrencyValue": 50000,
     "ExtendBagItemConfig": 60006,
     "ExtendBagCapacity": 5,
-    "TeamMemberLimit": 4,
-    "NewDayTime": -2209086000
+    "TeamMemberLimit": 4
   }
 ]
